# talentleads

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  docker-compose.yml  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js
.cursor/rules/: cursor-rules.mdc
.github/workflows/: deploy-workers.yml  deploy.yml
blog/: admin.py  api.py  feeds.py  models.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0001_squashed_0001_initial.py  0001_squashed_0010_remove_blogpage_main_image.py  0002_blogpage.py  0003_blogpage_main_image.py  0004_alter_blogpage_icon_alter_blogpage_main_image.py  0004_blogpagetag_blogpage_tags.py  0005_alter_blogpage_icon_alter_blogpage_main_image.py  0005_blogtagindexpage.py  0006_remove_blogpage_date_blogpage_date_created_and_more.py  0008_delete_blogpagegalleryimage.py  0009_remove_blogtagindexpage_page_ptr_and_more.py  0010_remove_blogpage_main_image.py
deployment/: Dockerfile.server  Dockerfile.workers  entrypoint.sh  supervisord.conf
frontend/webpack/: webpack.config.prod.js
hackernews_developers/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
pages/: urls.py  views.py
profiles/: admin.py  agents.py  choices.py  constants.py  filters.py  hooks.py  models.py  schemas.py  tasks.py  urls.py  utils.py  views.py
profiles/migrations/: 0010_alter_profile_technologies_used_profiletechnology.py  (+5 more)
sales/: models.py  tasks.py  urls.py  views.py
talentleads/: api.py  asgi.py  auth.py  settings.py  sitemaps.py  urls.py  utils.py  wsgi.py
templates/: base.html
users/: admin.py  forms.py  hooks.py  models.py  schedules.py  tasks.py  urls.py  views.py
utils/: models.py  views.py
(+44 files in other folders)
